# MeowerBot-Legacy

./: pyproject.toml
src/MeowerBot/: __init__.py
