[tool.poetry]
name = "MeowerBotLegacy"
version = "1.5.0"
description = "A project with the goal of maintaining the original 1.x.x version of MeowerBot"
authors = ["showierdata9978 <68120127+showierdata9978@users.noreply.github.com>", "ArrowAced <89811520+ArrowAced@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "MeowerBotLegacy", from = "src"}
]
repository = "https://github.com/showierdata9978/MeowerBot"


[tool.poetry.dependencies]
python = "^3.8"
cloudlink = "0.1.7"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
